--- a/index.css
+++ b/index.css
@@ -76,3 +76,23 @@ body::after {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 }
 
+input {
+    padding: 8px 20px;
+    margin-right: 10px;
+}
+
+button {
+    background: rgba(255, 255, 255, 0.1);
+    border-color: rgb(255, 196, 157);
+    color: white; 
+    padding: 8px 16px;
+    font-size: 16px;
+    border: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: rgb(255, 129, 45);
+}
